# lesson_29

./: .gitignore  README.md  base_model.py  pyproject.toml  pytest.ini
ads/: models.py  permissions.py  validators.py
ads/migrations/: 0001_initial.py  0002_selection.py  0003_selection_items.py  0004_alter_ad_description_alter_ad_image_and_more.py
ads/serializers/: ads_serializers.py  cats_serializer.py  locs_serializer.py  selections_serilaziers.py  users_serializer.py
ads/views/: ads_views.py  cats_views.py  locs_views.py  selections_views.py  users_views.py
authentication/: models.py  validators.py
authentication/migrations/: 0001_initial.py  0002_user_role.py  0003_user_birth_date_alter_user_age.py
authentication/serializers/: users_serializer.py
authentication/views/: users_views.py
basics/: admin.py  models.py
basics/migrations/: 0001_initial.py  0002_category_slug.py
basics/serializers/: cats_serializer.py  locs_serializer.py
basics/views/: cats_views.py  locs_views.py
homework_29/: settings.py  urls.py
homework_29/urls_paths/: ads_urls.py  cats_urls.py  locs_urls.py  selections_urls.py  users_urls.py
loaddata/: ads.json  categories.json  locations.json  users.json
tests/: conftest.py  factories.py  fixtures.py
tests/ads_tests/: ads_get_many_test.py  ads_get_one_test.py  ads_post_test.py  selection_post_test.py
